--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="ramiBally_portfolio_website/css/styles.css">
+    <script src="ramiBally_portfolio_website/js/myscripts.js"></script>
     <title>Home</title>
 
     <link rel="shortcut icon" href="ramiBally_portfolio_website/img/favicon.ico" type="favicon.ico">
@@ -19,6 +20,7 @@
             <div class="dropdown-content">
             <a href="ramiBally_portfolio_website/html/my_resume.html">My Resume</a>
             <a href="ramiBally_portfolio_website/html/my_fun_facts.html">Fun Facts</a>
+            <a href="ramiBally_portfolio_website/html/Blog.html">BLOG</a>
             </div>
         </div>
     </nav>
