--- a/ramiBally_portfolio_website/html/my_resume.html
+++ b/ramiBally_portfolio_website/html/my_resume.html
@@ -19,6 +19,7 @@
             <div class="dropdown-content">
             <a href="../../index.html">Home</a>
             <a href="my_fun_facts.html">Fun Facts</a>
+            <a href="Blog.html">BLOG</a>
             </div>
         </div>
     </nav>
